--- a/content/post/checking-assumptions.Rmd
+++ b/content/post/checking-assumptions.Rmd
@@ -7,7 +7,7 @@ output:
     code_folding: hide
   pdf_document: default
   word_document: default
-og_image: /post/covid19-dawson-county_files/figure-html/featured_image-1.png
+og_image: /post/checking-assumptions_files/figure-html/featured_image-1.png
 draft: yes
 slug: checking-assumptions
 tags_include:
@@ -18,19 +18,21 @@ categories: Teaching
 Many years ago I started making videos of my lectures for my ecological statistics course. I still use those early videos, [now on YouTube](https://youtube.com/playlist?list=PLUFo9SxNSLuaipofuL20_Ynd3QMFTLj18),
 but a recent comment on [the checking assumptions video](https://youtu.be/E27HcS9QaT0) made me realize that I somehow misplaced 
 the code that I used to create the figures in the powerpoints 
-of the early videos.
+of the early videos. [^1]
 
 Rather than try to reproduce the old code in a non-public way, I 
 thought I would redo it here so it is easy to share. Plus, I get 
 to show of the new function my students and I wrote for making 
-nice residual plots with ggplot2. The exercise uses the horseshoe crab satellite male data from Agresti's book on categorical data analysis.
+nice residual plots with ggplot2. The exercise uses the horseshoe crab satellite male data from Agresti's book on categorical data analysis. 
+If you would like the explanations of the figures have a look at the
+video.
 
 ```{r setup, message=FALSE}
 # install.packages("glmbb") # install Ben Bolker's package 
 data(crabs, package = "glmbb")
 library("tidyverse")
 library("broom")
-library("NRES803")
+library("NRES803") # devtools::install_github("atyre2/NRES803")
 ```
 
 The video doesn't show it (it's in another video), but we first need to 
@@ -66,6 +68,80 @@ qqnorm(residuals(hsc1))
 qqline(residuals(hsc1))
 ```
 
+Next is the output of the `plot()` on a linear model object.
+
+```{r}
+old.par <- par(mfrow = c(2,2))
+plot(hsc1)
+par(old.par)
+```
+
+My students and I put together a function that uses ggplot2
+to make something similar. I like it because it includes
+confidence regions, which makes it easier to judge if the 
+smooth spline is "flat".
+
+```{r featured-image, message=FALSE}
+check_assumptions(hsc1)
+```
+
+
+One thing that plot makes clear is the presence of several 
+outliers. In [The Ecological Detective](https://www.google.com/books/edition/The_Ecological_Detective/katmvQDi8PMC?hl=en), Ray Hilborn and Marc Mangel
+have an entire section entitled "Don't let outliers ruin your life". 
+In that spirit, the next few plots identify and eliminate the
+outliers, and then refit the model. I'm going to switch
+over to using `broom` functions here, because too easy.
+I think in the video I remove the points with the largest 
+absolute values of the residuals, which isn't necessarily
+a good definition of an outlier.
+
+```{r}
+crabs <- augment(hsc1) # add model diagnostics 
+#which points have biggest residuals
+crabs |>   ## native pipe!!
+  rownames_to_column()|>
+  arrange(desc(abs(.resid))) |>
+  head()
+
+```
+
+So rows 69, 26, 79, and 141 have large residuals, more than 50%
+larger than the remainder. 
+
+```{r}
+outliers <- c(26, 69, 79, 141)
+hsc2 <- lm(weight~width, data = crabs[-outliers,])
+plot(weight~width, data = crabs)
+points(crabs[outliers,2, drop = TRUE], crabs[outliers,1, drop = TRUE], pch = "x", col = "red")
+abline(hsc2, lwd = 2)
+abline(hsc1, lty = 2)
+```
+
+The "outliers" are identified with the red 'x's. The
+original fit is given with a dashed line. How do the
+residual plots look with the outliers removed?
+
+```{r}
+qqnorm(residuals(hsc2))
+qqline(residuals(hsc2))
+```
+
+and finally checking for non-linearity by plotting 
+residuals against the independent variable width.
+
+```{r}
+plot(crabs[-outliers, "width", drop = TRUE], residuals(hsc2), 
+     xlab = "width [cm]", ylab = "Residuals",
+     main = "Residuals vs. Independent")
+abline(h = 0, lwd = 2, lty = 2)
+```
+
+and finally with the function from my package.
+
+```{r}
+check_assumptions(hsc2)
+```
 
 [^1]: Code not shown in the post can be found [on Github](https://github.com/rbind/cheap_shots).
 
